Resolve Conflicts between DDL, MS