@@ -1,23 +1,22 @@
 package io.github.thepragmaticsquad.fs.service.impl;
 
-import io.github.thepragmaticsquad.fs.dto.TransactionDetailedDto;
-import io.github.thepragmaticsquad.fs.dto.TransactionDto;
+import io.github.thepragmaticsquad.fs.dto.transaction.TransactionDto;
+import io.github.thepragmaticsquad.fs.dto.transaction.TransactionDetailedDto;
 import io.github.thepragmaticsquad.fs.entity.Transaction;
 import io.github.thepragmaticsquad.fs.mapper.TransactionMapper;
-import io.github.thepragmaticsquad.fs.repository.AccountRepository;
 import io.github.thepragmaticsquad.fs.repository.TransactionsRepository;
 import io.github.thepragmaticsquad.fs.service.TransactionService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TransactionServiceImpl implements TransactionService {
 
     private final TransactionsRepository transactionsRepository;
 
-    public TransactionServiceImpl(TransactionsRepository transactionsRepository, AccountRepository accountRepository) {
+
+    public TransactionServiceImpl(TransactionsRepository transactionsRepository) {
         this.transactionsRepository = transactionsRepository;
     }
 
@@ -25,7 +24,7 @@ public class TransactionServiceImpl implements TransactionService {
         List<Transaction> transactions = transactionsRepository.findAll();
         return transactions.stream()
                 .map(TransactionMapper.INSTANCE::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public TransactionDetailedDto getTransactionById(Long id) {
@@ -37,6 +36,6 @@ public class TransactionServiceImpl implements TransactionService {
         List<Transaction> transactions = transactionsRepository.findAllByAccount_Id(accountId);
         return transactions.stream()
                 .map(TransactionMapper.INSTANCE::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
